--- a/from-os-to-api.tex
+++ b/from-os-to-api.tex
@@ -22,7 +22,7 @@ The representational state transfer or simply REST is a set of architectural pri
 \textbf{Using HTTP methods explicitly} means to adhere to the one-to-one mapping between HTTP methods and CRUD operations. The CRUD operations are create, read, update and delete. The GET method should be used to retrieve a resouce and is supposed to cause no side effects. On the other hand, the POST method is designated for the creation of a resource on the server. To update the resource, one ought to use the PUT method, and finally, to delete the resource, the DELETE method should be used.
 
 \paragraph{}
-\textbf{To be stateless} the client and server need to send complete and independent requests. By sending complete and independent requests servers can take an advantage of load-balancing or forwarding the payload to other services for further processing. An ilustrative example is the case of pagination. If the communication would be stateful (as shown in the figure \ref{fig:Stateful request example}), the server would need to cache the current page of the client. That would mean that only a single server would be able to be deployed to hold the state. On the other side, stateless request (as shown in the figure \ref{fig:Stateless request example}) enables the server to load-balance easily.
+\textbf{To be stateless} the client and server need to send complete and independent requests. By sending complete and independent requests servers can take an advantage of load-balancing or forwarding the payload to other services for further processing. An illustrative example is the case of pagination. If the communication would be stateful (as shown in the figure \ref{fig:Stateful request example}), the server would need to cache the current page of the client. That would mean that only a single server would be able to be deployed to hold the state. On the other side, stateless request (as shown in the figure \ref{fig:Stateless request example}) enables the server to load-balance easily.
 
 \begin{figure}[h]
   \begin{subfigure}{}
@@ -54,7 +54,7 @@ Host: server
 The third principle of REST design is \textbf{exposing directory structure-like URIs}. URIs in REST architecture should be intuitive, easy to guess, and follow a tree-like hierarchy. GitHub API exposes URIs in a directory structure-like format. For example, to create a new repository in an organization, one would make a POST request to this URI: \texttt{/repos/{owner}/{repo}/projects}. Moreover, the directory structure-like URIs are also acting as a self-documentation of the API. In addition, adherence to this principle makes it easier to swap underlining technology because directory structure-like URIs do not expose the scripting technology file extensions like \texttt{.php} or \texttt{.asp}.
 
 \paragraph{}
-The final principle is to \textbf{transfer XML, JavaScript Object Notation (JSON), or both.} Those formats have the advantage of being standardized, simple, and human-readable. Most programing languages have libraries for parsing the formats.
+The final principle is to \textbf{transfer XML, JavaScript Object Notation (JSON), or both.} Those formats have the advantage of being standardized, simple, and human-readable. Most programming languages have libraries for parsing the formats.
 
 \paragraph{}
 To help us model and document the APIs more precisely, OpenAPI specifications can be used. We will describe it in more detail in the next section since we will refer to it in existing fuzzers and our implementation.
@@ -72,7 +72,7 @@ Two major versions of OpenAPI specification are currently used. The older one is
   \label{fig:openapi-specification}
 \end{figure}
 
-Let us have a look at the structure of OpenAPI specification and its separate fields to gain better knowledge about provided information. We will focus on context of fuzzing when describing it since it will be instrumental in subseqent chapters where we will take a look at existing work and implementation of our own fuzzer.
+Let us have a look at the structure of OpenAPI specification and its separate fields to gain better knowledge about provided information. We will focus on the context of fuzzing when describing it since it will be instrumental in subsequent chapters where we will take a look at existing work and implementation of our own fuzzer.
 
 \subsection{What OpenAPI provides}
 As we mentioned before, the OpenAPI specification is in JSON or YAML format. We will now traverse the structure and analyze \textit{keys} or \textit{sections} that may be used when fuzzing.
@@ -95,10 +95,10 @@ servers:
   \label{fig:Server definition with variables}
 \end{figure}
 
-The most informative and therefore most essential section of the OpenAPI specification is \textbf{paths}. The path section consists of a list of path objects definitions, where each definition describes one resource (URI path). Here we may notice the interconnection between the REST design strategy and the OpenAPI specification. For each resource, there are defined methods that correspond to the CRUD operations for the manipulation of the resource. Every method of a resource describes in great detail how the request to the described resource should look like. It defines the request body, its content type, structure, and types. Similarly, it defines the parameters. From the parameter's definition, we determine where they are located, whether it is a path, headers, cookies or query parameters. What is their structure, types, and if they are required. In addition to possible inputs of the resource, the method definition states the possible outputs as well - responses. The definition of responses supplies list of response objects. Every response object defines a HTTP status code, headers, and content that can be received as a response from particular resource-method pair. The content object is rather akin to the request body object. It defines the content type, structure, and types of the fields in the structure as well.
+The most informative and therefore most essential section of the OpenAPI specification is \textbf{paths}. The path section consists of a list of path objects definitions, where each definition describes one resource (URI path). Here we may notice the interconnection between the REST design strategy and the OpenAPI specification. For each resource, there are defined methods that correspond to the CRUD operations for the manipulation of the resource. Every method of a resource describes in great detail how the request to the described resource should look like. It defines the request body, its content type, structure, and types. Similarly, it defines the parameters. From the parameter's definition, we determine where they are located, whether it is a path, headers, cookies, or query parameters. What is their structure, types, and if they are required. In addition to possible inputs of the resource, the method definition states the possible outputs as well - responses. The definition of responses supplies list of response objects. Every response object defines an HTTP status code, headers, and content that can be received as a response from particular resource-method pair. The content object is rather akin to the request body object. It defines the content type, structure, and types of the fields in the structure as well.
 
 \label{subsec:components}
-As you know APIs reuse many things and the same holds true for their descriptions. For instance, the structure of the error message may be the same for every resource. Another example can be listing objects and getting a single one. The structure of responses or even requests might be rather alike. One can imagine how tedious and error-prone would it be to write the same definitions to numerous resources. For this particular reason OpenAPI specification defines a section called \textbf{components}. In the components section, user may define structures, as a single point of truth, that can be subsequently referenced in other sections. An example can be seen in figure \ref{fig:openapi-specification} where the \texttt{ErrorResponse} object is defined in components section and referenced from response object in \texttt{/user/\{userID\}} resource.
+As you know APIs reuse many things and the same holds true for their descriptions. For instance, the structure of the error message may be the same for every resource. Another example can be listing objects and getting a single one. The structure of responses or even requests might be rather alike. One can imagine how tedious and error-prone would it be to write the same definitions to numerous resources. For this particular reason OpenAPI specification defines a section called \textbf{components}. In the components section, the user may define structures, as a single point of truth, that can be subsequently referenced in other sections. An example can be seen in figure \ref{fig:openapi-specification} where the \texttt{ErrorResponse} object is defined in components section and referenced from response object in \texttt{/user/\{userID\}} resource.
 
 The last top-level section that we will explore is \textbf{security} section. This section illustrates which authorization schemes the API uses. The security scheme consists of a type, for instance, apiKey, HTTP basic authentication, oauth2, openIdConnect or mutualTLS, name, its location in the request, and other information based on the scheme type. The authorization scheme can be then applied per resource-method pair or to the whole API.
 
