--- a/main.tex
+++ b/main.tex
@@ -150,7 +150,7 @@ Here I'll write an abstract in Slovak.
 % -------------------
 \newpage
 \section*{Abstract}
-In this work we researched techniques used for fuzzing of the web services. We paid the attention mainly to the black-box automated fuzzing. For the automatic exploration of the structure of web services we utilized OpenAPI specification. After knowing the structure of the web service were able to create a generation-based \textit{smart} fuzzer that will construct requests that comply with the OpenAPI specification of the API. Thanks to which we were able to achieve large code coverage and find bugs in a such battle-tested production-grade software as Kubernetes, Gitea ot Vault.
+In this work, we researched techniques used for fuzzing web services. We paid attention mainly to the black-box automated fuzzing. For the automatic exploration of the structure of web services, we utilized OpenAPI specification. After knowing the structure of the web service were able to create a generation-based \textit{smart} fuzzer that will construct requests that comply with the OpenAPI specification of the API. Thanks to which we were able to achieve large code coverage and find bugs in such battle-tested production-grade software as Kubernetes, Gitea, or Vault.
 
 \paragraph*{Keywords:} fuzzing, OpenAPI, black-box, fuzzer
 
